--- a/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
@@ -8,7 +8,7 @@
 			<input mdInput placeholder="Methane (ppm)" type="number" [(ngModel)]="fields.methaneLevel">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input mdInput placeholder="Description" type="number" [(ngModel)]="fields.description">
+			<input mdInput placeholder="Description" [(ngModel)]="fields.description">
 		</md-input-container>
 	</div>
 </md-dialog-content>
