--- a/client/src/app/components/unverified-data/dialog/edit-unverified-instantaneous-dialog/edit-unverified-instantaneous-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-instantaneous-dialog/edit-unverified-instantaneous-dialog.component.html
@@ -14,6 +14,9 @@
 		<md-input-container class="md-input-full-width">
 			<input mdInput placeholder="Barometric Pressure" type="number" [(ngModel)]="fields.barometricPressure">
 		</md-input-container>
+		<md-input-container class="md-input-full-width">
+			<input mdInput placeholder="Methane (ppm)" type="number" [(ngModel)]="fields.methaneLevel">
+		</md-input-container>
 		<md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment" class="mat-select-row" style="width:100%">
 			<md-option *ngFor="let instrument of availableInstruments" [value]="instrument.id">
 				{{instrument.serialNumber}}
@@ -38,7 +41,7 @@
 				</div>
 			</div>
 		</div>
-		<div *ngIf="!isNew" style="font-size: 13px">* = Unverified IME Number</div>
+		<div style="font-size: 13px">* = Unverified IME Number</div>
 	</div>
 </md-dialog-content>
 <md-dialog-actions>
