--- a/client/src/app/components/report/integrated-report/integrated-report.component.html
+++ b/client/src/app/components/report/integrated-report/integrated-report.component.html
@@ -113,7 +113,7 @@
 			</div>
 			<button md-raised-button color="accent" 
 				(click)="downloadReport()" 
-				[disabled]="!report.imeReportData?.length && !report.iseReportData?.length && !report.probeExceedanceReportData?.length" 
+				[disabled]="!report.integratedReportData?.length" 
 				style="margin: 8px 24px 24px 24px;">
 				DOWNLOAD PDF
 				<md-icon>file_download</md-icon>
