added super admin warning message

--- a/client/src/app/components/dashboard/dashboard.component.scss
+++ b/client/src/app/components/dashboard/dashboard.component.scss
@@ -58,3 +58,9 @@
 	line-height: 16px;
 	padding-top: 4px;
 }
+
+.super-admin-warning {
+	color: red; // TODO Move this to theme.
+    font-size: 14px;
+    padding-bottom: 16px;
+}
