--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,15 @@
 <div class="dashboard-container">
+	<div *ngIf="isSuperAdmin" class="super-admin-warning">
+		<p>
+			You are currently logged in as the super admin. The purpose of the super admin account is
+			to perform administrative tasks such as changing application settings, creating initial
+			users, etc.
+		</p>
+		<p>
+			It is NOT RECOMMENDED to use the super admin account to perform data entry/manipulation.
+			Please use another user account instead.
+		</p>
+	</div>
 	<div class="dashboard-title">
 		Welcome to Landfill e-Forms!
 	</div>
