fix(verbage): removed unnecessary 'Numbers' suffix after IME/ISE (#50)

--- a/client/src/app/components/exceedance/ime-number-list-sideinfo/ime-number-list-sideinfo.component.html
+++ b/client/src/app/components/exceedance/ime-number-list-sideinfo/ime-number-list-sideinfo.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!imeNumber">
 	<div class="sideinfo-not-selected">
 		<md-icon>pageview</md-icon>
-		<div>Select an IME Number to view its details.</div>
+		<div>Select an IME to view its details.</div>
 	</div>
 </div>
 <div *ngIf="imeNumber" style="height:calc(100% - 128px);">
