--- a/client/src/app/components/exceedance/ime-number/ime-number.component.html
+++ b/client/src/app/components/exceedance/ime-number/ime-number.component.html
@@ -4,7 +4,7 @@
 		<md-card style="margin-bottom: 16px">
 			<md-card-content>
 				<div class="card-title">
-					IME Number Details
+					IME Details
 				</div>
 				<div *ngIf="imeNumberData">
 					<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 				<div *ngIf="!imeNumberData">
-					IME Number '{{imeNumber}}' could not be found.
+					IME number '{{imeNumber}}' could not be found.
 				</div>
 			</md-card-content>
 		</md-card>
