--- a/client/src/app/components/exceedance/ise-number-list-sideinfo/ise-number-list-sideinfo.component.html
+++ b/client/src/app/components/exceedance/ise-number-list-sideinfo/ise-number-list-sideinfo.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!iseNumber">
 	<div class="sideinfo-not-selected">
 		<md-icon>pageview</md-icon>
-		<div>Select an ISE Number to view its details.</div>
+		<div>Select an ISE to view its details.</div>
 	</div>
 </div>
 <div *ngIf="iseNumber" style="height:calc(100% - 128px);">
