--- a/client/src/app/components/exceedance/ise-number/ise-number.component.html
+++ b/client/src/app/components/exceedance/ise-number/ise-number.component.html
@@ -4,7 +4,7 @@
 		<md-card style="margin-bottom: 16px">
 			<md-card-content>
 				<div class="card-title">
-					ISE Number Details
+					ISE Details
 				</div>
 				<div *ngIf="iseNumberData">
 					<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
@@ -41,7 +41,7 @@
 					</div>
 				</div>
 				<div *ngIf="!iseNumberData">
-					ISE Number '{{iseNumber}}' could not be found.
+					ISE number '{{iseNumber}}' could not be found.
 				</div>
 			</md-card-content>
 		</md-card>
