--- a/client/src/app/components/unverified-data/unverified-data-set-list-sideinfo/unverified-data-set-list-sideinfo.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set-list-sideinfo/unverified-data-set-list-sideinfo.component.html
@@ -75,13 +75,13 @@
 				Warmspot Data
 			</div>
 			<div *ngIf="unverifiedDataSet.imeNumbers?.length > 0" class="sideinfo-section-data-list-item" style="width:256px;">
-				IME Numbers
+				IMEs
 			</div>
 			<div *ngIf="unverifiedDataSet.unverifiedIntegratedData?.length > 0" class="sideinfo-section-data-list-item" style="width:256px;">
 				Inetgrated Data
 			</div>
 			<div *ngIf="unverifiedDataSet.iseNumbers?.length > 0" class="sideinfo-section-data-list-item" style="width:256px;">
-				ISE Numbers
+				ISEs
 			</div>
 			<div *ngIf="unverifiedDataSet.unverifiedProbeData?.length > 0" class="sideinfo-section-data-list-item" style="width:256px;">
 				Probe Data
