--- a/client/src/app/components/exceedance/styles/exceedance-number.scss
+++ b/client/src/app/components/exceedance/styles/exceedance-number.scss
@@ -1,6 +1,10 @@
 .page {
-	padding: 24px 113px 0 24px;
+	padding: 24px 24px 0 24px;
 	min-height: 100%;
+
+	&.can-edit {
+		padding: 24px 113px 0 24px;
+	}
 }
 
 .info-card {
