--- a/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
+++ b/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
@@ -41,7 +41,7 @@
 		</button>
 		<button md-menu-item (click)="logout()">
 			<md-icon>exit_to_app</md-icon>
-			<span>Logout</span>
+			<span>Sign Out</span>
 		</button>
 	</md-menu>
 </md-toolbar>
