--- a/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
@@ -10,6 +10,11 @@
 		<md-input-container class="md-input-full-width">
 			<input mdInput placeholder="Description" [(ngModel)]="fields.description">
 		</md-input-container>
+		<md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment" class="mat-select-row" style="width:100%">
+			<md-option *ngFor="let instrument of availableInstruments" [value]="instrument.id">
+				{{instrument.serialNumber}}
+			</md-option>
+		</md-select>
 	</div>
 </md-dialog-content>
 <md-dialog-actions>
