--- a/client/src/app/components/navigation/navigation-drawer/navigation-drawer.component.html
+++ b/client/src/app/components/navigation/navigation-drawer/navigation-drawer.component.html
@@ -26,6 +26,6 @@
 		fxLayout="row"
 		fxLayoutAlign=" center">
 		<md-icon class="navdrawer-link-icon flex-item" fxFlex="72px">exit_to_app</md-icon>
-		<div class="flex-item" fxFlex>Log Out</div>
+		<div class="flex-item" fxFlex>Sign Out</div>
 	</div>
 </div>
