#49 Warmspot instruments and Methane Level

--- a/client/src/app/components/unverified-data/dialog/edit-unverified-instantaneous-dialog/edit-unverified-instantaneous-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-instantaneous-dialog/edit-unverified-instantaneous-dialog.component.html
@@ -22,6 +22,13 @@
 				{{instrument.serialNumber}}
 			</md-option>
 		</md-select>
+		<!-- ADDING GRID TO EDIT -->
+		<!-- <md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment" class="mat-select-row" style="width:100%">
+			<md-option *ngFor="let instrument of availableInstruments" [value]="instrument.id">
+				{{instrument.serialNumber}}
+			</md-option>
+		</md-select> -->
+		<!-- ADDING GRID TO EDIT -->
 	</div>
 	<div class="flex-item" fxFlex style="padding-left: 16px;">
 		<div style="padding: 6px 0; font-weight: 500;">Available IMEs</div>
