--- a/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
@@ -1,21 +1,38 @@
 <div md-dialog-title>Edit Single Probe Reading</div>
 <md-dialog-content>
-	<div class="flex-item" fxFlex style="padding-right: 16px;">
-		<md-input-container class="md-input-full-width">
-			<input mdInput placeholder="Barometric Pressure" type="number" [(ngModel)]="fields.barometricPressure">
-		</md-input-container>
-		<md-input-container class="md-input-full-width">
-			<input mdInput placeholder="Methane (ppm)" type="number" [(ngModel)]="fields.methaneLevel">
-		</md-input-container>
-		<md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment" class="mat-select-row" style="width:100%">
-			<md-option *ngFor="let instrument of availableInstruments" [value]="instrument.id">
-				{{instrument.serialNumber}}
-			</md-option>
-		</md-select>
-		<md-input-container class="md-input-full-width">
-			<input mdInput placeholder="Description" [(ngModel)]="fields.description">
-		</md-input-container>
-	</div>
+	<div class="dialog-form-container flex-container" fxLayout="row">
+		<div class="flex-item" fxFlex style="padding-right: 16px;">
+			<md-input-container class="md-input-full-width">
+				<input mdInput placeholder="Barometric Pressure" type="number" [(ngModel)]="fields.barometricPressure">
+			</md-input-container>
+			<md-input-container class="md-input-full-width">
+				<input mdInput placeholder="Methane (ppm)" type="number" [(ngModel)]="fields.methaneLevel">
+			</md-input-container>
+			<md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment" class="mat-select-row" style="width:100%">
+				<md-option *ngFor="let instrument of availableInstruments" [value]="instrument.id">
+					{{instrument.serialNumber}}
+				</md-option>
+			</md-select>
+			<md-input-container class="md-input-full-width">
+				<input mdInput placeholder="Description" [(ngModel)]="fields.description">
+			</md-input-container>
+		</div>
+		<div class="flex-item" fxFlex style="padding-left: 16px;">
+			<div style="padding: 6px 0; font-weight: 500;">Inspectors</div>
+			<div class="list-picker-box" [ngStyle]="{'height': isNew ? '399px' : '341px'}">
+				<div *ngFor="let inspector of inspectorsWrapped" class="list-item-container flex-container" fxLayout="row"> 
+					<div class="list-item-add-button flex-item" fxFlex="36px" fxFlexAlign="center">
+						<md-checkbox [(ngModel)]="inspector.selected"></md-checkbox>
+					</div>
+					<div class="list-item-info flex-item" fxFlex>
+						<div class="list-item-title">
+							{{StringUtils.formatUserName(inspector.inspector)}}
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>	
 </md-dialog-content>
 <md-dialog-actions>
 	<button md-button (click)="cancel()">
