--- a/client/src/app/components/unverified-data/dialog/edit-unverified-integrated-dialog/edit-unverified-integrated-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-integrated-dialog/edit-unverified-integrated-dialog.component.html
@@ -2,6 +2,9 @@
 <md-dialog-content>
 	<div class="flex-item" fxFlex style="padding-right: 16px;">
 		<md-input-container class="md-input-full-width">
+			<input mdInput placeholder="Grid" disabled type="text" [(ngModel)]="fields.grid">
+		</md-input-container>
+		<md-input-container class="md-input-full-width">
 			<input mdInput placeholder="Barometric Pressure" type="number" [(ngModel)]="fields.barometricPressure">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
