--- a/client/src/app/components/unverified-data/dialog/edit-unverified-instantaneous-dialog/edit-unverified-instantaneous-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-instantaneous-dialog/edit-unverified-instantaneous-dialog.component.html
@@ -1,6 +1,10 @@
 <div md-dialog-title>Edit Single Instantaneous Reading</div>
 <md-dialog-content>
 	<div class="flex-item" fxFlex style="padding-right: 16px;">
+		<app-time-picker-input placeholder="Date"
+			[initialDate]="fields.Date"
+			class="md-input-full-width">
+		</app-time-picker-input>
 		<app-time-picker-input placeholder="Start Time"
 			[initialDate]="fields.startTime"
 			(dateChanged)="updateStartTime($event)"
@@ -22,13 +26,6 @@
 				{{instrument.serialNumber}}
 			</md-option>
 		</md-select>
-		<!-- ADDING GRID TO EDIT -->
-		<!-- <md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment" class="mat-select-row" style="width:100%">
-			<md-option *ngFor="let instrument of availableInstruments" [value]="instrument.id">
-				{{instrument.serialNumber}}
-			</md-option>
-		</md-select> -->
-		<!-- ADDING GRID TO EDIT -->
 	</div>
 	<div class="flex-item" fxFlex style="padding-left: 16px;">
 		<div style="padding: 6px 0; font-weight: 500;">Available IMEs</div>
