--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -106,6 +106,11 @@
 									<div class="data-table-column truncate flex-item" fxFlex="3">
 										<span class="data-table-header-label">Grid</span>
 									</div>
+									<!-- #42 -->
+									<div class="data-table-column truncate flex-item" fxFlex="5">
+										<span class="data-table-header-label">Date</span>
+									</div> 
+									<!-- #42 -->
 									<div class="data-table-column truncate flex-item" fxFlex="5">
 										<span class="data-table-header-label">Start</span>
 									</div>
@@ -145,6 +150,11 @@
 											<div class="data-table-column truncate flex-item" fxFlex="3">
 												{{unverifiedInstantaneousData.monitoringPoint?.name}}
 											</div>
+											<!-- #42 -->
+											<div class="data-table-column truncate flex-item" fxFlex="5">
+												{{DateTimeUtils.getTime(unverifiedInstantaneousData.date)}}
+											</div>
+											<!-- #42 -->
 											<div class="data-table-column truncate flex-item" fxFlex="5">
 												{{DateTimeUtils.getTime(unverifiedInstantaneousData.startTime)}}
 											</div>
@@ -367,6 +377,11 @@
 									<div class="data-table-column truncate flex-item" fxFlex="3">
 										<span class="data-table-header-label">Grid</span>
 									</div>
+									<!-- #42 -->
+									<div class="data-table-column truncate flex-item" fxFlex="5">
+										<span class="data-table-header-label">Date</span>
+									</div> 
+									<!-- #42 -->
 									<div class="data-table-column truncate flex-item" fxFlex="5">
 										<span class="data-table-header-label">Start</span>
 									</div>
@@ -409,6 +424,11 @@
 											<div class="data-table-column truncate flex-item" fxFlex="3">
 												{{unverifiedIntegratedData.monitoringPoint?.name}}
 											</div>
+											<!-- #42 -->
+											<div class="data-table-column truncate flex-item" fxFlex="5">
+												{{DateTimeUtils.getDate(unverifiedIntegratedData.date)}}
+											</div> 
+											<!-- #42 -->
 											<div class="data-table-column truncate flex-item" fxFlex="5">
 												{{DateTimeUtils.getTime(unverifiedIntegratedData.startTime)}}
 											</div>
