--- a/client/src/app/components/unverified-data/dialog/edit-unverified-instantaneous-dialog/edit-unverified-instantaneous-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-instantaneous-dialog/edit-unverified-instantaneous-dialog.component.html
@@ -1,10 +1,9 @@
 <div md-dialog-title>Edit Single Instantaneous Reading</div>
 <md-dialog-content>
 	<div class="flex-item" fxFlex style="padding-right: 16px;">
-		<app-time-picker-input placeholder="Date"
-			[initialDate]="fields.Date"
-			class="md-input-full-width">
-		</app-time-picker-input>
+		<md-input-container class="md-input-full-width">
+			<input mdInput placeholder="Date" [value]="fields.startTime | date: 'shortDate'" disabled>
+		</md-input-container>
 		<app-time-picker-input placeholder="Start Time"
 			[initialDate]="fields.startTime"
 			(dateChanged)="updateStartTime($event)"
