--- a/client/src/app/components/unverified-data/dialog/edit-unverified-integrated-dialog/edit-unverified-integrated-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-integrated-dialog/edit-unverified-integrated-dialog.component.html
@@ -2,7 +2,7 @@
 <md-dialog-content>
 	<div class="flex-item" fxFlex style="padding-right: 16px;">
 		<md-input-container class="md-input-full-width">
-			<input mdInput placeholder="Date" type="number" [(ngModel)]="fields.date">
+			<input mdInput placeholder="Date" [value]="fields.startTime | date: 'shortDate'" disabled>
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
 			<input mdInput placeholder="Barometric Pressure" type="number" [(ngModel)]="fields.barometricPressure">
