feat: created dialogs for editing IME/ISE data (#47, #64)

--- a/client/src/app/components/exceedance/ime-number/ime-number.component.html
+++ b/client/src/app/components/exceedance/ime-number/ime-number.component.html
@@ -36,7 +36,7 @@
 							Grid(s)
 						</div>
 						<div *ngIf="!isCleared" class="info-card-data-value truncate flex-item" fxFlex>
-							<a>{{listGrids(imeNumberData)}}</a>
+							<a (click)="openGridDialog()">{{listGrids(imeNumberData)}}</a>
 						</div>
 						<div *ngIf="isCleared" class="info-card-data-value truncate flex-item" fxFlex>
 							{{listGrids(imeNumberData)}}
