--- a/client/src/app/components/exceedance/dialog/ime-grids-dialog/ime-grids-dialog.component.html
+++ b/client/src/app/components/exceedance/dialog/ime-grids-dialog/ime-grids-dialog.component.html
@@ -6,7 +6,7 @@
 	<button md-button (click)="cancel()"> 
 		CANCEL 
 	</button> 
-	<button md-button (click)="confirm()"> 
+	<button md-button (click)="submit()"> 
 		UPDATE 
 	</button> 
 </md-dialog-actions>
