updated styling of inspector selection list

--- a/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
@@ -27,7 +27,7 @@
 					<div class="list-item-add-button flex-item" fxFlex="36px" fxFlexAlign="center">
 						<md-checkbox [(ngModel)]="inspector.selected"></md-checkbox>
 					</div>
-					<div class="list-item-info flex-item" fxFlex>
+					<div class="single-line list-item-info" fxFlex>
 						<div class="list-item-title">
 							{{StringUtils.formatUserName(inspector.inspector)}}
 						</div>
