--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -588,20 +588,30 @@ $group-add-remove-button-width: 50px;
 .list-item-info {
 	height: 64px; // Does not conform to Material design
 	padding: 8px 16px 8px 0;
-}
 
-.list-item-title {
-	color: rgba(0,0,0,0.87);
-	font-size: 13px;
-}
+	.list-item-title {
+		color: rgba(0,0,0,0.87);
+		font-size: 13px;
+	}
 
-.list-item-description {
-	color: rgba(0,0,0,0.54);
-	font-size: 13px;
-	overflow-y: auto;
-	line-height: 16px;
-	height: 32px;
-	padding-top: 2px;
+	.list-item-description {
+		color: rgba(0,0,0,0.54);
+		font-size: 13px;
+		overflow-y: auto;
+		line-height: 16px;
+		height: 32px;
+		padding-top: 2px;
+	}
+
+	&.single-line {
+		height: 48px;
+		padding: 0 16px 0 0;
+
+		.list-item-title {
+			font-size: 14px;
+			line-height: 48px;
+		}
+	}
 }
 
 .section-subheader {
