#64 made IME Exceedances into checkox

--- a/client/src/app/components/exceedance/dialog/ime-grids-dialog/ime-grids-dialog.component.html
+++ b/client/src/app/components/exceedance/dialog/ime-grids-dialog/ime-grids-dialog.component.html
@@ -1,7 +1,19 @@
 <div md-dialog-title>Add/Remove Grids</div> 
 <md-dialog-content> 
-	<div *ngFor="let grid of wrappedGrids" (click)="grid.selected = !grid.selected">
-		{{grid.monitoringPoint.name}} {{grid.selected && 'SELECTED'}}
+	<div class="flex-item" fxFlex style="padding-left: 16px;">
+		<div style="padding: 6px 0; font-weight: 500;">Grids</div>
+		<div class="list-picker-box" style="height: 341px;">
+			<div *ngFor="let grid of wrappedGrids" class="list-item-container flex-container" fxLayout="row"> 
+				<div class="list-item-add-button flex-item" fxFlex="36px" fxFlexAlign="center">
+					<md-checkbox [(ngModel)]="grid.selected"></md-checkbox>
+				</div>
+				<div class="list-item-info flex-item" fxFlex>
+					<div class="list-item-title">
+						{{grid.monitoringPoint.name}}
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </md-dialog-content>     
 <md-dialog-actions> 
